syntax = "proto3";

option csharp_namespace = "GrpcBasket";

package BasketApi;

message BasketRequest {
  string id = 1;
}

message CustomerBasketRequest {
  string buyerId = 1;
  repeated BasketItemResponse items = 2;
}

message CustomerBasketResponse {
  string buyerId = 1;
  repeated BasketItemResponse items = 2;
}

message BasketItemResponse {
  string id = 1;
  int32 productId = 2;
  string productName = 3;
  double unitPrice = 4;
  double oldunitPrice = 5;
  int32 quantity = 6;
  string pictureUrl = 7;
}

service Basket {
  rpc GetBasketById(BasketRequest) returns (CustomerBasketResponse) {}
  rpc UpdateBasket(CustomerBasketRequest) returns (CustomerBasketResponse) {}
}
